--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.12.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
@@ -29,5 +30,4 @@
     "type": "git",
     "url": "git+https://github.com/patricknavarrete/Auth"
   }
-  
 }
