--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node server",
     "dev": "cross-env NODE_ENV=development nodemon server"
   },
-  "author": "Rajayogan",
+  "author": "Patrick",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
